fix: edit z-indexes in footer (19:47 05.10.22)

--- a/online-zoo/pages/donate/style.sass
+++ b/online-zoo/pages/donate/style.sass
@@ -918,6 +918,8 @@ form > button
 
     .btn5
         margin: 72px 13px 0 9px
+        position: relative
+        z-index: 5
 
     .social
         position: absolute
@@ -926,6 +928,7 @@ form > button
         top: 55px
         left: calc((100vw - 194px)/2)
         flex-direction: row
+        z-index: 1
 
     .center
         position: static
