--- a/online-zoo/pages/main/style.sass
+++ b/online-zoo/pages/main/style.sass
@@ -1567,6 +1567,8 @@ form > button
 
     .btn5
         margin: 72px 13px 0 9px
+        position: relative
+        z-index: 5
 
     .social
         position: absolute
@@ -1575,6 +1577,7 @@ form > button
         top: 55px
         left: calc((100vw - 194px)/2)
         flex-direction: row
+        z-index: 1
 
     .center
         position: static
